@@ -1,3 +1,8 @@
+2011-02-05 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Clush.py: Do not disable internal messages gathering when using -bL
+	for proper display after Ctrl-C interruption (#133).
+
 2011-01-15 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.4 released.
